# zero

./: .gitignore  .gitmodules  =20.3  DepthCamera_2025-01-15-15-14-39.json  DepthCamera_2025-01-27-14-09-21.json  ForwardKinematics.py  ScreenCamera_2025-04-01-15-35-32.json  T_ip_theory_sim_[15, 0, 0, 0, 0, 0, 0].npy  action_position_utils copy.py  array_with_commas.txt  arxiv_manipulation.json  autodisplay.sh  batch_analysis.py  bbox_[15, 0, 0, 0, 0, 0, 0].npy  centroids_mine.csv  centroids_origin.csv  check.py  cu116env.yaml  demo_pusht.py  edge_enhance.ipynb  edge_enhance.py  edge_process.ipynb  edge_process.py  env.sh  environment.yml  find_what_in_pickle.py  frames_each_episode.pkl  frames_each_episode.txt  image_processing.py  laion.ipynb  loss.py  mean.npy  minimal_r.txt  myjob.err  myjob.out  omegaconfig.py  optimized_ae.py  output.1  path_data_pre_process.py  pc_numbers_mine.csv  (+33 more)
.VSCodeCounter/2025-04-06_17-14-08/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-06_17-14-58/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-06_17-17-41/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-04-20_09-11-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
5_templates/: rlbench_template.py
6_ThirdParty/: test.txt
EXPlog/: .~xelsize.docx  voxelsize.docx
assets/: peract_tasks.json
recon_exp/: first_try.py
results_visualization/: compare.py  draw.py
scripts/: Augmentation_eval.sh  Augmentation_train.sh  LongHorizon_eval_base.sh  LongHorizon_eval_horizon.sh  LongHorizon_train_eval.sh  LongHorizon_train_horizon.sh  batch_analysis.sh  eval.sh  eval_all.sh  eval_expBaseV4.sh  eval_expBins.sh  eval_exp_bins.sh  eval_horizon.sh  eval_new_config.sh  eval_verify.sh  preprocess.sh  resume.sh  test_obs.sh  test_pg.sh  train.sh  train_control_group.sh  train_horizon.sh  train_horizon_single_variation.sh  train_single.sh  verify_expbasev4.sh
zero/: demo_pusht.py
(+695 files in other folders)
