[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "zero"

version = "0.0"

description = "First attempt at imitation learning on RLBench"

requires-python = ">=3.8"

license = { text = "MIT" }

authors = [
    { name = "Jaz", email = "jianzhou0420@outlook.com" },
]


