[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "zero"

version = "0.0"

description = "First attempt at imitation learning on RLBench"

requires-python = ">=3.8"

license = { text = "MIT" }

authors = [
    { name = "Jaz", email = "jianzhou0420@outlook.com" },
]

[tool.setuptools.packages.find]
include=["zero","zero.*"]
exclude=["1_Data","1_Data.*",
         "2_Train","2_Train.*",
         "3_Eval","3_Eval.*",
         "4_Paper","4_Paper.*",
         "5_templates","5_templates.*",
         "6_ThirdParty","6_ThirdParty.*",]
         